# Kris

./: .gitignore  Directory.Build.props  MRTW.sln  README.md
docs/: BACKLOG.md  architecture.md  build.md  event_model.md  safety.md  ui_spec.md
samples/benign/: README.md
src/MRTW.App/: App.xaml  App.xaml.cs  Converters.cs  ExportSettingsWindow.xaml  ExportSettingsWindow.xaml.cs  MRTW.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  ViewModels.cs
src/MRTW.Cli/: MRTW.Cli.csproj  Program.cs
src/MRTW.Collectors.Etw/: AnalysisCaseRunner.cs  AnalysisOrchestrator.cs  EtwCollectionResult.cs  EtwCollectorOptions.cs  MRTW.Collectors.Etw.csproj  TraceEventEtwCollector.cs
src/MRTW.Core/: AssemblyInfo.cs  BatchAnalysisSummary.cs  BehaviorCorrelator.cs  BehaviorRuleLoader.cs  BoundedCaptureBuffer.cs  CaptureLimits.cs  CaseExportService.cs  CaseRunner.cs  CaseService.cs  CommandNormalizationService.cs  DemoCaseFactory.cs  EvidencePathPolicy.cs  ExecutionTargetPolicy.cs  HookPipeServer.cs  HostSecuritySnapshotProvider.cs  IocLedgerBuilder.cs  LiveBatchAccumulator.cs  MRTW.Core.csproj  Models.cs  MrtwConfigService.cs  NetworkContainmentService.cs  NonPeTriageService.cs  PrivacyRedactor.cs  ProcessTreeGraphBuilder.cs  RuntimeCaseCollector.cs  SnapshotService.cs  StaticAnalysisService.cs
src/MRTW.Native/: CMakeLists.txt  CMakePresets.json  README.md  build_native.ps1
src/MRTW.Native/hook/: api_hooks_anti_analysis.cpp  api_hooks_com_wmi.cpp  api_hooks_credential.cpp  api_hooks_discovery.cpp  api_hooks_environment.cpp  api_hooks_evasion_extra.cpp  api_hooks_file.cpp  api_hooks_impact.cpp  api_hooks_ipc.cpp  api_hooks_module.cpp  api_hooks_network.cpp  api_hooks_process.cpp  api_hooks_registry.cpp  api_hooks_service_system.cpp  api_hooks_stealer.cpp  api_hooks_tamper.cpp  api_hooks_token.cpp  hook.cpp  hook.h  hook_state.h  json_util.h  pipe_client.cpp  pipe_client.h
src/MRTW.Native/injector/: injector.cpp  injector.h  main.cpp
test/: README.md  Run-CliBatchIntegration.ps1  Run-GuiSmoke.ps1  Run-IsolatedVmIntegration.ps1
test/MRTW.ProbeTests/: Program.cs
test/MRTW.RegressionTests/: MRTW.RegressionTests.csproj  Program.cs
test/NativeSafeRuntimeProbe/: CMakeLists.txt  main.cpp
(+11 files in other folders)
